2016-09-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.2.0.
	* version.ac, configure.ac: Adapted.
	* gregorio.test: Change program name by
	gregorio=gregorio-$FILENAME_VERSION.

2016-08-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.2.0-rc3.
	* version.ac, configure.ac: Adapted.
	* Makefile.am: bin_PROGRAMS = gregorio-$(FILENAME_VERSION).

2016-07-15  Karl Berry  <karl@tug.org>

	* configure.ac (AC_CHECK_ALIGNOF): add.
	* gregorio-src/src/sha1.c (UNALIGNED_P): handle differently.
	For Mojca, 14 Jul 2016 13:35:25,
	https://github.com/gregorio-project/gregorio/pull/1186.

2016-05-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.4.
	* version.ac, configure.ac: Adapted.

2016-05-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.3.
	* version.ac, configure.ac: Adapted.

2016-05-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.2.
	* version.ac, configure.ac: Adapted.

2016-03-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.1.
	* version.ac, configure.ac: Adapted.

2016-03-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0.
	* version.ac, configure.ac: Adapted.

2016-02-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0-rc2.
	* version.ac: Adapted.

2016-02-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0-rc1.
	* version.ac: Adapted.

2016-02-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0-beta3.
	* version.ac: Adapted.

2016-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0-beta2.
	* version.ac: Adapted.

2016-02-08  Karl Berry  <karl@tug.org>

	* configure.ac (gl_FUNC_REALPATH_WORKS): from gnulib/canonicalize.m4.
	(AC_INIT): replace spurious "ChkTeX" with "gregorio".

2016-01-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0-beta1.
	* version.ac: Adapted.

2015-12-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.0.1.
	* version.ac: Adapted.
